[project]
name = "xapblr"
dynamic = ["version"]
authors = [
  { name="Siegfried Kircheis", email="kircheis.siegfried@proton.me" },
]
description = "Locally index a tumblr blog with xapian for searching."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=1.4",
    "pytumblr2",
    "flask",
    "flask-assets",
    "dateparser",
    "requests",
    "pillow",
    "xapian-bindings",
    "versioningit",
]

[build-system]

requires = [
    "setuptools >= 42",
    "versioningit",
]
build-backend = "setuptools.build_meta"


[tool.versioningit]
method = "git"

[project.scripts]
xapblr = "xapblr:main"

[project.urls]
"Homepage" = "https://github.com/skircheis/xapblr"
"Bug Tracker" = "https://github.com/skircheis/xapblr/issues"
